23-September-2013:
==================
+ Added com.tightdb.IOException, as a RuntimeException can be thrown from all methods operating on files, like Group(file), SharedGroup(file) etc.

20-September-2013:
==================
+ Added View.getColumnCount(), View.getColumnIndex(colIndex), View.getColumnName(colIndex), View.getColumnType(colIndex) to Dynamic interface
- Removed Table.getColumnCount(), Table.getColumnIndex(colIndex), Table.getColumnName(colIndex), Table.getColumnType(colIndex) from Typed interface


19-September-2013:
==================
+ Multiple tables of same type in typed interface can be added to same group, by specifying a custom name in the constructor.


10-September-2013:
==================
- Deprecated ReadTransaction.close()
+ WriteTransaction.commit() now throws IllegalStateException


09-September-2013:
==================
+ Added Table.toString(), Table.toString(maxRows), Table.rowToString(row)
+ Added TableView.toString(), TableView.toString(maxRows), TableView.rowToString(row)
+ Added Group.toString(), toJson(), equals()
+ Added Mixed.getReadableValue()
+ Added SharedGroup.hasChanged()
+ Added validation of parameters in all methods. Exceptions are now thrown if invalid parameters are passed. 

06-September-2013:
=================
! BUGFIX: Fixed small leak in TableQuery.

13-August-2013:
===============
+ Table.add() now returns row index of the added row. 

04-August-2013:
===============
+ Experimental Table.findSortedLong() replaced by Table.lowerBoundLong() and Table.upperBoundLong() because these provide more flexibility, and it follows similar changes in the core library. (Kristian Spangsege)

05-July-2013:
============
+ Exception now thrown when calling a method on a closed Group().
! Proper exception is now thrown if group.writeToFile() is called on an existing file.

06-06-2013:
===========
+- at() in Table and TableView is now deprecated. Use get() instead.