@@ -35,6 +35,14 @@ JNIEXPORT jboolean JNICALL Java_com_tightdb_Table_nativeIsValid
 
 /*
  * Class:     com_tightdb_Table
+ * Method:    nativeEquals
+ * Signature: (JJ)Z
+ */
+JNIEXPORT jboolean JNICALL Java_com_tightdb_Table_nativeEquals
+  (JNIEnv *, jobject, jlong, jlong);
+
+/*
+ * Class:     com_tightdb_Table
  * Method:    nativeIsRootTable
  * Signature: (J)Z
  */
