@@ -1,3 +1,7 @@
+24-September-2013:
+==================
++ Added com.tightdb.Table.equals() and fixed com.tightdb.Group.equals()
+
 23-September-2013:
 ==================
 + Added com.tightdb.IOException, as a RuntimeException can be thrown from all methods operating on files, like Group(file), SharedGroup(file) etc.
